--- a/calico_versioned_docs/version-3.28/reference/configure-cni-plugins.mdx
+++ b/calico_versioned_docs/version-3.28/reference/configure-cni-plugins.mdx
@@ -250,12 +250,34 @@ When using `type: k8s`, the {{prodname}} CNI plugin requires read-only Kubernete
 
 ### Enabling policy setup timeout
 
-The `policy_setup_timeout_seconds` option makes the {{prodname}} CNI plugin wait to start a new pod until one of the following conditions occurs:
+The {{prodname}} CNI plugin can be configured to delay new pods from starting their containers until one of the following conditions occurs:
 
 - The pod's policy has finished being programmed.
 - A specified amount of time has elapsed.
 
-By setting this option, you can avoid errors that can occur when a pod tries to start before the pod's policy is programmed.
+By enabling this feature, you can avoid errors that can occur when a pod tries to start before the pod's policy is programmed by its host.
+
+<Tabs>
+<TabItem label="Operator" value="Operator-0">
+
+The policy setup timeout can be configured by setting the `linuxPolicySetupTimeoutSeconds` field in the [calicoNetwork spec](installation/api#operator.tigera.io/v1.CalicoNetworkSpec) of the default `operator.tigera.io/v1/installation` resource.
+
+The following example configures the CNI to delay a pod from starting its containers for up to 10 seconds, or until the pod's dataplane has been programmed:
+
+```yaml
+kind: Installation
+apiVersion: operator.tigera.io/v1
+metadata:
+  name: default
+spec:
+  calicoNetwork:
+    linuxPolicySetupTimeoutSeconds: 10
+```
+
+</TabItem>
+<TabItem label="Manifest" value="Manifest-0">
+
+The policy setup timeout can be configured by setting the `policy_setup_timeout_seconds` option in the CNI config.
 
 Example CNI config:
 
@@ -264,18 +286,18 @@ Example CNI config:
   "name": "any_name",
   "cniVersion": "0.1.0",
   "type": "calico",
+  "policy_setup_timeout_seconds": 10,
   "ipam": {
-    "type": "calico-ipam",
-    "policy_setup_timeout_seconds": 10
+    "type": "calico-ipam"
   }
 }
 ```
 
-The {{prodname}} CNI plugin uses {{prodname}}'s `endpoint-status` directory to determine when the dataplane has been programmed for a pod.
-By default, the {{prodname}} CNI plugin will look for the directory at: `/var/run/calico/endpoint-status`.
-To enable and adjust where {{prodname}} writes `endpoint-status`, the `endpointStatusPathPrefix` option must be configured for [Felix](./felix/configuration.mdx).
+The {{prodname}} CNI plugin reads Felix's `endpoint-status` directory to determine when the dataplane has been programmed for a pod.
+If left unset, the {{prodname}} CNI plugin will look for the directory at `/var/run/calico/endpoint-status`. The path `/var/run/calico` is commonly mounted to the {{prodname}} DaemonSet, meaning it can be written to by the Felix container, and read by the (host-namespace) {{prodname}} CNI plugin.
+To enable the `endpoint-status` directory, and adjust which directory of the Felix container it is written to, the `endpointStatusPathPrefix` option must be configured for [Felix](./felix/configuration.mdx).
 
-To adjust where the {{prodname}} CNI plugin looks for {{prodname}}'s `endpoint-status` directory, you must set the `endpoint_status_dir` option.
+To adjust where the {{prodname}} CNI plugin looks for the `endpoint-status` directory in the host filesystem, you must set the `endpoint_status_dir` option.
 
 Example CNI config:
 
@@ -284,13 +306,15 @@ Example CNI config:
   "name": "any_name",
   "cniVersion": "0.1.0",
   "type": "calico",
+  "policy_setup_timeout_seconds": 10,
+  "endpoint_status_dir": "/path/to/endpoint-status",
   "ipam": {
-    "type": "calico-ipam",
-    "policy_setup_timeout_seconds": 10,
-    "endpoint_status_dir": "/path/to/endpoint-status"
+    "type": "calico-ipam"
   }
 }
 ```
+</TabItem>
+</Tabs>
 
 ## IPAM
 
