DOCS-2204: Removes docs for Rancher UI installation

--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -31,7 +31,7 @@ This release of {{prodname}} includes several optimizations to improve the perfo
 {{prodname}} has revised the installation steps for Rancher RKE2 to accommodate options available in the most recent versions of that platform.
 
 <!--The following anchor text and link need to be updated to /rke2.mdx after updates are incorporated-->
-For more information, see [Rancher Manager](../../getting-started/install-on-clusters/rancher-ui.mdx).
+For more information, see [Rancher Manager](../../getting-started/install-on-clusters/rke2.mdx).
 
 #### Improvements to Envoy to accommodate advanced ingress controllers
 
@@ -53,6 +53,10 @@ This includes the following:
 * Non-root context whenever possible and added drop ALL `Capabilities`
 * Root context and privilege escalation are used only when necessary
 * `SeccompProfile` is set to `RuntimeDefault`
+
+### Deprecated and removed features
+
+* We removed support and documentation for installing Calico Enterprise using the Rancher UI.
 
 ### Known issues {#known-issues-3.16.0}
 
