fix a link and reword a sentence on configure-cni-plugins page

--- a/calico-enterprise/reference/component-resources/configuration.mdx
+++ b/calico-enterprise/reference/component-resources/configuration.mdx
@@ -229,7 +229,7 @@ When using `type: k8s`, the {{prodname}} CNI plugin requires read-only Kubernete
 
 ### Enabling policy setup timeout
 
-The {{prodname}} CNI plugin can be configured to delay new pods from starting their containers until one of the following conditions occurs:
+The {{prodname}} CNI plugin can be configured to prevent new pods from starting their containers until one of the following conditions occurs:
 
 - The pod's policy has finished being programmed.
 - A specified amount of time has elapsed.
@@ -274,7 +274,7 @@ Example CNI config:
 
 The {{prodname}} CNI plugin reads Felix's `endpoint-status` directory to determine when the dataplane has been programmed for a pod.
 If left unset, the {{prodname}} CNI plugin will look for the directory at `/var/run/calico/endpoint-status`. The path `/var/run/calico` is commonly mounted to the {{prodname}} DaemonSet, meaning it can be written to by the Felix container, and read by the (host-namespace) {{prodname}} CNI plugin.
-To enable the `endpoint-status` directory, and adjust which directory of the Felix container it is written to, the `endpointStatusPathPrefix` option must be configured for [Felix](node//felix/configuration.mdx).
+To enable the `endpoint-status` directory, and adjust which directory of the Felix container it is written to, the `endpointStatusPathPrefix` option must be configured for [Felix](node/felix/configuration.mdx).
 
 To adjust where the {{prodname}} CNI plugin looks for the `endpoint-status` directory in the host filesystem, you must set the `endpoint_status_dir` option.
 
