--- a/calico-enterprise_versioned_docs/version-3.19-2/reference/component-resources/configuration.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/reference/component-resources/configuration.mdx
@@ -231,7 +231,7 @@ When using `type: k8s`, the {{prodname}} CNI plugin requires read-only Kubernete
 
 ### Enabling policy setup timeout
 
-The {{prodname}} CNI plugin can be configured to delay new pods from starting their containers until one of the following conditions occurs:
+The {{prodname}} CNI plugin can be configured to prevent new pods from starting their containers until one of the following conditions occurs:
 
 - The pod's policy has finished being programmed.
 - A specified amount of time has elapsed.
