--- a/calico-enterprise_versioned_docs/version-3.19-2/reference/component-resources/configuration.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/reference/component-resources/configuration.mdx
@@ -225,14 +225,40 @@ you must also run `{{imageNames.kubeControllers}}` with the policy, profile, and
 
 When using `type: k8s`, the {{prodname}} CNI plugin requires read-only Kubernetes API access to the `Pods` resource in all namespaces.
 
+</TabItem>
+</Tabs>
+
+
 ### Enabling policy setup timeout
 
-The `policy_setup_timeout_seconds` option makes the {{prodname}} CNI plugin wait to start a new pod until one of the following conditions occurs:
+The {{prodname}} CNI plugin can be configured to prevent new pods from starting their containers until one of the following conditions occurs:
 
 - The pod's policy has finished being programmed.
 - A specified amount of time has elapsed.
 
-By setting this option, you can avoid errors that can occur when a pod tries to start before the pod's policy is programmed.
+By enabling this feature, you can avoid errors that can occur when a pod tries to start before the pod's policy is programmed by its host.
+
+<Tabs>
+<TabItem label="Operator" value="Operator-0">
+
+The policy setup timeout can be configured by setting the `linuxPolicySetupTimeoutSeconds` field in the [calicoNetwork spec](../installation/api#operator.tigera.io/v1.CalicoNetworkSpec) of the default `operator.tigera.io/v1/installation` resource.
+
+The following example configures the CNI to delay a pod from starting its containers for up to 10 seconds, or until the pod's dataplane has been programmed:
+
+```yaml
+kind: Installation
+apiVersion: operator.tigera.io/v1
+metadata:
+  name: default
+spec:
+  calicoNetwork:
+    linuxPolicySetupTimeoutSeconds: 10
+```
+
+</TabItem>
+<TabItem label="Manifest" value="Manifest-0">
+
+The policy setup timeout can be configured by setting the `policy_setup_timeout_seconds` option in the CNI config.
 
 Example CNI config:
 
@@ -241,18 +267,18 @@ Example CNI config:
   "name": "any_name",
   "cniVersion": "0.1.0",
   "type": "calico",
+  "policy_setup_timeout_seconds": 10,
   "ipam": {
-    "type": "calico-ipam",
-    "policy_setup_timeout_seconds": 10
+    "type": "calico-ipam"
   }
 }
 ```
 
-The {{prodname}} CNI plugin uses {{prodname}}'s `endpoint-status` directory to determine when the dataplane has been programmed for a pod.
-By default, the {{prodname}} CNI plugin will look for the directory at: `/var/run/calico/endpoint-status`.
-To enable and adjust where {{prodname}} writes `endpoint-status`, the `endpointStatusPathPrefix` option must be configured for [Felix](node/felix/configuration.mdx).
+The {{prodname}} CNI plugin reads Felix's `endpoint-status` directory to determine when the dataplane has been programmed for a pod.
+If left unset, the {{prodname}} CNI plugin will look for the directory at `/var/run/calico/endpoint-status`. The path `/var/run/calico` is commonly mounted to the {{prodname}} DaemonSet, meaning it can be written to by the Felix container, and read by the (host-namespace) {{prodname}} CNI plugin.
+To enable the `endpoint-status` directory, and adjust which directory of the Felix container it is written to, the `endpointStatusPathPrefix` option must be configured for [Felix](node/felix/configuration.mdx).
 
-To adjust where the {{prodname}} CNI plugin looks for {{prodname}}'s `endpoint-status` directory, you must set the `endpoint_status_dir` option.
+To adjust where the {{prodname}} CNI plugin looks for the `endpoint-status` directory in the host filesystem, you must set the `endpoint_status_dir` option.
 
 Example CNI config:
 
@@ -261,13 +287,15 @@ Example CNI config:
   "name": "any_name",
   "cniVersion": "0.1.0",
   "type": "calico",
+  "policy_setup_timeout_seconds": 10,
+  "endpoint_status_dir": "/path/to/endpoint-status",
   "ipam": {
-    "type": "calico-ipam",
-    "policy_setup_timeout_seconds": 10,
-    "endpoint_status_dir": "/path/to/endpoint-status"
+    "type": "calico-ipam"
   }
 }
 ```
+</TabItem>
+</Tabs>
 
 ## IPAM
 
@@ -279,10 +307,6 @@ allocates blocks of addresses and single addresses alike in response to cluster 
 
 Host local IPAM is generally only used on clusters where integration with the Kubernetes [route controller](https://kubernetes.io/docs/concepts/architecture/cloud-controller/#route-controller) is necessary.
 Note that some Calico features - such as the ability to request a specific address or pool for a pod - require Calico IPAM to function, and will not work with host-local IPAM enabled.
-
-</TabItem>
-
-</Tabs>
 
 <Tabs>
 <TabItem label="Operator" value="Operator-2">
