--- a/calico-cloud_versioned_docs/version-19-1/image-assurance/install-the-admission-controller.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/image-assurance/install-the-admission-controller.mdx
@@ -74,7 +74,7 @@ For example, to configure the Kubernetes API server to send admission requests f
 resources created in any namespace with label key `name`, and label values either `prod` or `staging-test`, set the variables as follows:
 
    ```bash
-   export IN_NAMESPACE_SELECTOR_KEY="name" && IN_NAMESPACE_SELECTOR_VALUES="prod staging-test"
+   export IN_NAMESPACE_SELECTOR_KEY="name" && export IN_NAMESPACE_SELECTOR_VALUES="prod staging-test"
    ```
 Here is the namespace manifest with the staging-test label and name key.
 
