--- a/use-cases/egress-access-controls.mdx
+++ b/use-cases/egress-access-controls.mdx
@@ -55,8 +55,7 @@ Securing Kubernetes egress makes the above vectors less likely to succeed:
 Egress access controls shouldn’t be used in isolation as a security defense mechanism
 But when combined with microsegmentation practices, egress gateways (for integration with external firewalls) and runtime security, it can greatly enhance your security posture by offering prevention and increasing the likelihood of earlier detection.
 
-In one of our blogs, we demonstrate how implementing egress access controls in Kubernetes is enough to thwart an exploit of the log4shell vulnerability.
-//TODO: Needs link.
+In one of our blogs, we demonstrate how [implementing egress access controls in Kubernetes is enough to thwart an exploit of the log4shell vulnerability.](https://www.tigera.io/blog/how-network-security-policies-can-protect-your-environment-from-future-vulnerabilities-like-log4j/)
 
 
 
