--- a/calico-enterprise/compliance/compliance-reports-cis.mdx
+++ b/calico-enterprise/compliance/compliance-reports-cis.mdx
@@ -26,6 +26,10 @@ We recommend that you review the CIS benchmark best practices for securing clust
 
 ## Before you begin
 
+**Required**
+
+* You enabled [Enable compliance reports](../compliance/enable-compliance)
+
 **Limitations**
 
 CIS benchmarks runs only on nodes where {{prodname}} is running. This limitation may exclude control plane nodes in some managed cloud platforms (AKS, EKS, GKE). Because the user has limited control over installation of control plane nodes in managed cloud platforms, these reports may have limited use for cloud users.
